[package]
name = "azure_uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
azure_core = "0.17.0"
azure_storage = "0.17.0"
azure_storage_blobs = "0.17.0"
base64 = "0.21.5"
bytes = "1.5.0"
futures = "0.3.29"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
url = "2.4.1"
mime_guess = "*"